Initial commit with fix for #152 by introduction of Rollup Callback plugin - deprecating RollupLoggerPlugin__mdt and RollupLoggerPluginParameter__mdt, as those were always supposed to have been RollupPlugin__mdt and RollupPluginParameter__mdt

--- a/extra-tests/classes/RollupTestUtils.cls
+++ b/extra-tests/classes/RollupTestUtils.cls
@@ -25,7 +25,7 @@ public class RollupTestUtils {
     return new List<Rollup.FlowInput>{ flowInput };
   }
 
-  public class DMLMock extends Rollup.DMLHelper {
+  public class DMLMock extends RollupSObjectUpdater {
     public List<SObject> Records = new List<SObject>();
     public override void doUpdate(List<SObject> recordsToUpdate) {
       this.Records = recordsToUpdate;
