Adding @jongpie feedback for Rollup Callback plugin, with example LWC for displaying a notification on the parent-level record when it's been updated

--- a/plugins/RollupCallback/tests/RollupDispatchTests.cls
+++ b/plugins/RollupCallback/tests/RollupDispatchTests.cls
@@ -29,6 +29,7 @@ public class RollupDispatchTests {
 
     Test.startTest();
     updater.doUpdate(new List<SObject>{ new Account() });
+    System.assertEquals(1, Limits.getPublishImmediateDML(), 'Rollup callback event should have been published');
     Test.stopTest();
 
     System.assertEquals(true, RollupDispatch.wasCalled);
@@ -43,6 +44,7 @@ public class RollupDispatchTests {
     updater.doUpdate(new List<SObject>{ new Account() });
     Test.stopTest();
 
+    System.assertEquals(true, RollupDispatch.wasCalled);
     System.assertEquals(true, dispatcherMockWasCalled);
   }
 
