--- a/plugins/CustomObjectRollupLogger/classes/RollupLogEventHandler.cls
+++ b/plugins/CustomObjectRollupLogger/classes/RollupLogEventHandler.cls
@@ -1,4 +1,5 @@
-public class RollupLogEventHandler {
+public without sharing class RollupLogEventHandler {
+  @SuppressWarnings('PMD.ApexCRUDViolation')
   public void handle(List<RollupLogEvent__e> logEvents) {
     Map<String, RollupLog__c> transactionIdToLogs = new Map<String, RollupLog__c>();
 
