Attempting to fix several issues reported by Katherine West - one of which has been brought on by (presumably) an NPSP update that creates a situation where a batch job kicks off multiple rounds of rollups - another of which was a null pointer exception on matchingCalcIds

--- a/extra-tests/classes/RollupSObjectUpdaterTests.cls
+++ b/extra-tests/classes/RollupSObjectUpdaterTests.cls
@@ -14,6 +14,14 @@ public class RollupSObjectUpdaterTests {
   }
 
   @IsTest
+  static void shouldAllowDecimalToBeSavedAsInteger() {
+    Account acc = new Account();
+    new RollupSObjectUpdater(Account.NumberOfEmployees).updateField(acc, 3.00);
+
+    System.assertEquals(3, acc.NumberOfEmployees);
+  }
+
+  @IsTest
   static void shouldRethrowForUnhandledConversion() {
     SObjectException ex;
 
