--- a/rollup/core/classes/RollupSObjectUpdater.cls
+++ b/rollup/core/classes/RollupSObjectUpdater.cls
@@ -66,7 +66,7 @@ public without sharing virtual class RollupSObjectUpdater {
         this.fillDispatcher(dispatchers, pluginParameter.Value__c);
       }
 
-      RollupLogger.Instance.log('dispatching updated records to:', this.getLogString(dispatchers), LoggingLevel.DEBUG);
+      RollupLogger.Instance.log('dispatching updated records to: ' + this.getLogString(dispatchers), LoggingLevel.DEBUG);
       for (IDispatcher dispatcher : dispatchers) {
         dispatcher.dispatch(updatedRecords);
       }
